--- a/créations.html
+++ b/créations.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/universal-css.css">
     <link rel="stylesheet" href="css/créations.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Epsilon Delta - Créations</title>
 </head>
 
