--- a/creations.html
+++ b/creations.html
@@ -18,7 +18,7 @@
             <a href="index.html"><img src="assets/icons/ed-icon.png" onMouseOver="this.src='assets/icons/ed-icon2.png'"
                     onMouseOut="this.src='assets/icons/ed-icon.png'" width=64px height=64px></a>
             <a class="barrenavlastbutton" href="index.html">Accueil</a>
-            <a class="barrenavbutton" href="créations.html">Créations</a>
+            <a class="barrenavbutton" href="creations.html">Créations</a>
             <a class='barrenavbutton' href="réseaux.html">Réseaux et contact</a>
         </div>
     </header>
