--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#"><img src="assets/icons/ed-icon.png" onMouseOver="this.src='assets/icons/ed-icon2.png'"
                     onMouseOut="this.src='assets/icons/ed-icon.png'" width=64px height=64px></a>
             <a class="barrenavlastbutton" href="index.html">Accueil</a>
-            <a class="barrenavbutton" href="créations.html">Créations</a>
+            <a class="barrenavbutton" href="creations.html">Créations</a>
             <a class='barrenavbutton' href="réseaux.html">Réseaux et contact</a>
         </div>
 
@@ -46,7 +46,7 @@
                     du Multimédia et d’Internet</a> à <a href="https://www.iutmulhouse.uha.fr/">l’IUT de
                     Mulhouse</a>. J’ai pu donc apprendre le codage des sites internet, la création de vidéos et
                     d’images, entre autres. Par conséquent, j’ai pu faire la majorité des créations (visibles sur la
-                    page <a href="créations.html">Créations</a>) et même créer de A à Z ce site !
+                    page <a href="creations.html">Créations</a>) et même créer de A à Z ce site !
                     <br>
                     J’utilise le Creative Cloud d’Adobe (Photoshop, Illustrator et InDesign pour tout ce qui est
                     infographie et Premiere Pro et After Effects pour la vidéo) et 3DS Max pour tout ce qui est 3D.
@@ -98,7 +98,7 @@
                     </div>
                     <div class="voirplus-container">
                         <div class="voirplus">
-                            <a href="créations.html" id="voirplus">Voir plus</a>
+                            <a href="creations.html" id="voirplus">Voir plus</a>
                         </div>
                     </div>
                 </div>
