--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     J’utilise le Creative Cloud d’Adobe (Photoshop, Illustrator et InDesign pour tout ce qui est
                     infographie et Premiere Pro et After Effects pour la vidéo) et 3DS Max pour tout ce qui est 3D.
                     <br>
-                    Je suis passionné dans tout ce qui est dans le domaine du cinéma, de la télévisiobn, informatique, animation, jeux vidéo (en particulier les jeux au style
+                    Je suis passionné dans tout ce qui est dans le domaine du cinéma, de la télévision, l'informatique, l'animation, des jeux vidéo (en particulier les jeux au style
                     rétro) et tout ce qui est culture japonaise et manga/anime. Comme dit précédemment, je
                     réalise énormément de choses, notamment des films lorsque j’en ai la possibilité. En dehors de ça, j’aime explorer
                     des endroits et voyager et prendre des photos de différentes choses, qu’elle soient mises en scène ou pas.
@@ -60,6 +60,19 @@
             <div class="desc-img">
                 <img src="assets/img/alex.jpeg">
             </div>
+        </div>
+        <div class="colon-zone">
+            <div id="colon"></div>
+            <div id="colon"></div>
+            <div id="colon"></div>
+            <div id="colon"></div>
+            <div id="colon"></div>
+            <div id="colon"></div>
+            <div id="colon"></div>
+            <div id="colon"></div>
+            <div id="colon"></div>
+            <div id="colon"></div>
+            <div id="colon"></div>
         </div>
         <div id="créations" class="creations-container">
             <div class="creations">
