--- a/index.html
+++ b/index.html
@@ -37,24 +37,22 @@
         <div id="description">
             <div class="desc-text">
                 <h2>Qui suis-je ?</h2>
-                <p>C'est une très très bonne question.<br>
-                    Et bien je suis Alexandre David et j’ai 19 ans. Habitant à Mulhouse, Je suis un grand créatif qui adore étendre son imagination sur beaucoup de choses, en particulier le multimédia :<br>
-                    Je fais du photomontage et du montage vidéo mais aussi de la 3D, des sites web, des albums CD, des
-                    DVD et plein d’autres choses !
+                <p>
+                    Je suis Alexandre David et j’ai 19 ans. Habitant à Mulhouse, Je suis un grand créatif qui adore étendre son imagination sur beaucoup de choses, en particulier le multimédia :<br>
+                    Je fais du photomontage et du montage vidéo mais aussi de la 3D, des sites web, des albums CD, des DVD et plein d’autres choses !
                     <br>
                     Actuellement étudiant, je fais une formation DUT dans les <a href="https://www.mmi.uha.fr/">Métiers
                     du Multimédia et d’Internet</a> à <a href="https://www.iutmulhouse.uha.fr/">l’IUT de
-                    Mulhouse</a>. J’ai pu donc apprendre le codage des sites internet, la création de vidéos et
-                    d’images, entre autres. Par conséquent, j’ai pu faire la majorité des créations (visibles sur la
-                    page <a href="creations.html">Créations</a>) et même créer de A à Z ce site !
+                    Mulhouse</a>. J’ai donc appris le codage des sites internet (HTML, CSS, PHP, JavaScript), la création de vidéos et
+                    d’images, la communication, etc. Par conséquent, j’ai pu faire la majorité des créations (visibles sur la
+                    page <a href="créations.html">Créations</a>) et même coder ce site de A à Z manuellement!
                     <br>
                     J’utilise le Creative Cloud d’Adobe (Photoshop, Illustrator et InDesign pour tout ce qui est
                     infographie et Premiere Pro et After Effects pour la vidéo) et 3DS Max pour tout ce qui est 3D.
                     <br>
-                    Je suis passionné dans tout ce qui est dans le domaine du cinéma, de la télévision, l'informatique, l'animation, des jeux vidéo (en particulier les jeux au style
-                    rétro) et tout ce qui est culture japonaise et manga/anime. Comme dit précédemment, je
-                    réalise énormément de choses, notamment des films lorsque j’en ai la possibilité. En dehors de ça, j’aime explorer
-                    des endroits et voyager et prendre des photos de différentes choses, qu’elle soient mises en scène ou pas.
+                    Je suis passionné dans tout ce qui est dans le domaine du cinéma, de la télévision, informatique, animation, jeux vidéo (en particulier les jeux au style
+                    rétro) et tout ce qui est culture japonaise et manga/anime. Comme dit précédemment, je réalise énormément de choses, notamment des films lorsque j’en ai la possibilité. 
+                    En dehors de ça, j’aime explorer, voyager et prendre des photos de différentes choses, qu’elle soient mises en scène ou pas.
                 </p>
             </div>
             <div class="desc-img">
