Amélioration de l'easter egg (A vous de trouver comment y accéder)

--- a/origins/page internet.html
+++ b/origins/page internet.html
@@ -13,7 +13,7 @@
 <head>
  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
  <meta charset="utf-8">
- <title>Canada Boards</title>
+ <title>1ES</title>
 <center>
  <style type="text/css">
 .Style1 {
@@ -80,6 +80,6 @@
    <param name="type" value="audio/mpeg">
 </object>
 <br/>
-<p><a href="../index.html" style="color: white; text-decoration: none;">(Pré-Epsilon Delta)</a></p>
+<p><a href="../index.html" style="color: white; text-decoration: none;">(Epsilon Delta) mais c'est Alexandre DAVID en 1re ES</a></p>
 </body>
 </html>
