--- a/origins/passions.html
+++ b/origins/passions.html
@@ -31,13 +31,13 @@
 }
  </style>
  <center>
- <title>SW NR CH</title>
+ <title>1ES - Mes Passions</title>
 </head>
 <body background="assets/bg.png">
 <ul id="nav">
    <li id="nav-home"><a href="page internet.html">Accueil</a></li>
-   <li id="nav-about"><a href="../Base de donn&eacute;es/site internet.html">Les bases de donn&eacute;es</a></li>
-   <li id="nav-archive"><a href="../Base de donn&eacute;es/connexion.php">Connexion</a></li>
+   <li id="nav-about"><a href="passions.html">Passions</a></li>
+   <li id="nav-archive"><a href="musique.html">Goûts musicaux</a></li>
 </ul>
 <br/>
 <h1 class="Style1">Mes Passions</h1>
