--- a/websites/3d-solar.html
+++ b/websites/3d-solar.html
@@ -128,7 +128,7 @@
         </div>
     </div>
     <div id="link">
-            <a href="../créations.html"><p>(Epsilon Delta)</p></a>
+            <a href="../creations.html"><p>(Epsilon Delta)</p></a>
     </div>
 </body>
 
