--- a/websites/journuit.html
+++ b/websites/journuit.html
@@ -25,7 +25,7 @@
         <div id="sea"></div>
     </div>
     <div id="link">
-        <a href="../créations.html"><p>(Epsilon Delta)</p></a>
+        <a href="../creations.html"><p>(Epsilon Delta)</p></a>
     </div>
     <script src="../js/journuit.js"></script>
 </body>
