--- a/websites/js-f3x.html
+++ b/websites/js-f3x.html
@@ -14,7 +14,7 @@
     <input type="submit" class="envoi" name="envoi" value="Click here">
     <script type="text/javascript" src="../js/js-f3x.js"></script>
     <div id="link">
-        <a href="../créations.html"><p>(Epsilon Delta)</p></a>
+        <a href="../creations.html"><p>(Epsilon Delta)</p></a>
     </div>
 </body>
 </html>
