--- a/websites/whopper.html
+++ b/websites/whopper.html
@@ -13,7 +13,7 @@
         <h1>WHOPPER</h1>
         <h1>WHOPPER</h1>
         <img src="whopper-assets/whopper.png" class="img-whopper">
-        <a href="../créations.html" style="color: black; text-decoration: none;"><p id="ed">(Epsilon Delta)</p></a>
+        <a href="../creations.html" style="color: black; text-decoration: none;"><p id="ed">(Epsilon Delta)</p></a>
     </div>
     <script src="../js/whopper.js"></script>
 </body>
