--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <br> 
                     J’ai appris le codage des sites internet (HTML, CSS, PHP, JavaScript), la création de vidéos et
                     d’images, la communication, etc. De ce fait, j’ai pu faire la majorité des créations (visibles sur la
-                    page <a href="créations.html">Créations</a>) et même coder ce site de A à Z manuellement!
+                    page <a href="creations.html">Créations</a>) et même coder ce site de A à Z manuellement!
                     <br>
                     J’utilise le Creative Cloud d’Adobe (Photoshop, Illustrator, InDesign, Premiere Pro, After Effects) et 3DS Max.
                     <br>
